@@ -104,10 +104,9 @@ SET(EXT_OBJS             src/extensions/al_ext_loki.c)
 SET(MP3_OBJS             src/extensions/al_ext_mp3.c)
 SET(VORBIS_OBJS          src/extensions/al_ext_vorbis.c)
 
-SET(BSD_OBJS             src/backends/alc_backend_bsd.c)
 SET(DARWIN_OBJS          src/backends/alc_backend_darwin.c)
 SET(DMEDIA_OBJS          src/backends/alc_backend_irix.c)
-SET(LINUX_OBJS           src/backends/alc_backend_linux.c)
+SET(OSS_OBJS             src/backends/alc_backend_oss.c)
 SET(MORPHOS_OBJS         src/backends/alc_backend_morphos.c)
 SET(SOLARIS_OBJS         src/backends/alc_backend_solaris.c)
 SET(WINDOWS_OBJS         src/backends/alc_backend_windows.c)
@@ -177,12 +176,13 @@ ENDIF(CMAKE_SYSTEM MATCHES "Linux")
 #  OPTION(DSOUND      "directsound back-end"  OFF)
 #ENDIF(WIN32)
 
-OPTION(NATIVE      "native/oss back-end"  ON)
+OPTION(NATIVE      "native back-end"      ON)
 OPTION(ARTS        "arts back-end"        ON)
 OPTION(ARTS_DLOPEN "arts dynamic loading" ON)
 OPTION(DMEDIA      "DMedia/Irix back-end" ON)
 OPTION(ESD         "esd back-end"         ON)
 OPTION(ESD_DLOPEN  "esd dynamic loading"  ON)
+OPTION(OSS         "oss back-end"         ON)
 OPTION(SDL         "sdl back-end"         ON)
 OPTION(SDL_DLOPEN  "sdl dynamic loading"  ON)
 OPTION(WAVEOUT     "wave out back-end"    ON)
@@ -278,16 +278,6 @@ ENDIF(HAVE_DL)
 
 # Special OS objs for target systems
 IF(NATIVE)
-IF(CMAKE_SYSTEM MATCHES "Linux")
-  ADD_DEFINE(USE_BACKEND_NATIVE_LINUX)
-  SET(OS_OBJS ${LINUX_OBJS})
-ELSE(CMAKE_SYSTEM MATCHES "Linux")
-
-IF(CMAKE_SYSTEM MATCHES "BSD")
-  ADD_DEFINE(USE_BACKEND_NATIVE_BSD)
-  SET(OS_OBJS ${BSD_OBJS})
-ELSE(CMAKE_SYSTEM MATCHES "BSD")
-
 IF(CMAKE_SYSTEM MATCHES "SunOS")
   ADD_DEFINE(USE_BACKEND_NATIVE_SOLARIS)
   SET(OS_OBJS ${SOLARIS_OBJS})
@@ -314,16 +304,10 @@ ELSE(CMAKE_SYSTEM MATCHES "Darwin")
 IF(CMAKE_SYSTEM MATCHES "morphos")
   ADD_DEFINE(USE_BACKEND_NATIVE_MORPHOS)
   SET(OS_OBJS ${MORPHOS_OBJS})
-ELSE(CMAKE_SYSTEM MATCHES "morphos")
-
-  MESSAGE("unknown System")
-  SET(OS_OBJS ${LINUX_OBJS})
 ENDIF(CMAKE_SYSTEM MATCHES "morphos")
 ENDIF(CMAKE_SYSTEM MATCHES "Darwin")
 ENDIF(CMAKE_SYSTEM MATCHES "Windows")
 ENDIF(CMAKE_SYSTEM MATCHES "SunOS")
-ENDIF(CMAKE_SYSTEM MATCHES "BSD")
-ENDIF(CMAKE_SYSTEM MATCHES "Linux")
 ENDIF(NATIVE)
 
 # threads handling
@@ -410,6 +394,7 @@ int main(){return 0;}
       SET(${BACKEND_OPTION}_FOUND "1${${BACKEND_OPTION}_DLOPEN}" CACHE INTERNAL "")
     ELSE(HAVE_DL AND ${BACKEND_OPTION}_DLOPEN)
 
+      IF(NOT ${BACKEND_LIB} MATCHES "^$")
       IF(${BACKEND_OPTION}_LIBS MATCHES "^$")
         FIND_LIBRARY(${BACKEND_OPTION}_LIBS ${BACKEND_LIB} PATHS /usr/lib /usr/local/lib)
       ENDIF(${BACKEND_OPTION}_LIBS MATCHES "^$")
@@ -446,6 +431,9 @@ int main(){return 0;}
           MESSAGE(STATUS "${BACKEND_OPTION} doesn't link.")
         ENDIF(BACKEND_LINKS)
       ENDIF(${BACKEND_OPTION}_LIBS MATCHES "NOTFOUND")
+      ELSE(NOT ${BACKEND_LIB} MATCHES "^$")
+        SET(${BACKEND_OPTION}_FOUND "1${${BACKEND_OPTION}_DLOPEN}" CACHE INTERNAL "")
+      ENDIF(NOT ${BACKEND_LIB} MATCHES "^$")
     ENDIF(HAVE_DL AND ${BACKEND_OPTION}_DLOPEN)
   ELSE(HAVE_BACKEND_HEADER)
 
@@ -485,6 +473,7 @@ ENDIF(CMAKE_SYSTEM MATCHES "Linux")
 CHECK_BACKEND(ARTS   artsc      artsc      artsc.h             arts_free)
 CHECK_BACKEND(DMEDIA ""         audio      dmedia/audio.h      alGetResourceByName)
 CHECK_BACKEND(ESD    esd        esd        esd.h               esd_audio_open)
+CHECK_BACKEND(OSS    ""         ""         sys/soundcard.h     "")
 CHECK_BACKEND(SDL    sdl        sdl        SDL.h               SDL_LockAudio)
 #IF(WIN32)
 #  CHECK_BACKEND(DSOUND ""       dsound     dsound.h     ???)
